Retrotranslator Changelog
=================================

  - Supported: all constructors of java.io.PrintWriter.
  - Supported: java.util.concurrent.locks.Condition.awaitNanos(long) with very little accuracy guarantees.   
  - Bug fixed: translation did not work for ReentrantReadWriteLock.readLock() and ReentrantReadWriteLock.writeLock().

1.0.7 (2006-07-04)
---------------------------------
  - Bug fixed: MissingResourceException when Java 5.0 API is used for classes generated at runtime.
  - Ability to specify a package name for embedding retrotranslator-runtime-x.x.x.jar and backport-util-concurrent.jar.

1.0.6 (2006-06-27)
---------------------------------
  - Emulated generic signatures for the collections framework classes (useful for JAXB).
  - Cached data used by the transformer can be garbage collected.

1.0.5 (2006-06-05)
---------------------------------
  - New -advanced option allows to override Java 1.4 methods.
  - Supported in BigDecimal: ZERO, ONE, TEN, pow(int), toPlainString(), valueOf(double), valueOf(long).
  - Supported BigDecimal.setScale(int, int) for negative scales in advanced mode.
  - Ability to process UTF-8 text files in addition to bytecode: "-srcmask *.class;*.tld".
  - getMethod(String, Class...) and getDeclaredMethod(String, Class...) are intercepted in advanced mode
    to better support generics and covariant return types on several JVM implementations, e.g. JRockit 1.4.2_08-b03.
  - Upgraded to backport-util-concurrent 2.2.
  - Deleted net.sf.retrotranslator.runtime.java.util._Collections (edu.emory.mathcs.backport.java.util.Collections is
    used instead), so retrotranslator-runtime-1.0.5.jar is NOT binary compatible with retrotranslator-runtime-1.0.4.jar.

1.0.4 (2006-04-25)
---------------------------------
  - Bug fixed: String.replace(CharSequence, CharSequence) did not work with some characters.
  - Bug fixed: NotSerializableException when serializing annotations.