@@ -2,7 +2,8 @@ Retrotranslator Changelog
 =================================
 
   - Supported: all constructors of java.io.PrintWriter.
-  - Supported: java.util.concurrent.locks.Condition.awaitNanos(long) with very little accuracy guarantees.   
+  - Supported: java.rmi.server.RemoteObjectInvocationHandler. 
+  - Supported: java.util.concurrent.locks.Condition.awaitNanos(long) but with very little accuracy guarantees.
   - Bug fixed: translation did not work for ReentrantReadWriteLock.readLock() and ReentrantReadWriteLock.writeLock().
 
 1.0.7 (2006-07-04)
